# tamu-ojs-harvests

./: README.md  pyproject.toml
.github/workflows/: harvest.yml
oai_records/aavpt/: oai_aavptbiennial-ojs-tamu.tdl.org_article_10.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_100.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_101.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_102.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_103.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_104.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_105.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_106.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_107.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_108.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_109.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_11.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_110.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_111.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_112.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_113.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_114.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_115.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_116.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_117.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_118.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_119.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_12.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_120.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_121.xml  oai_aavptbiennial-ojs-tamu.tdl.org_article_122.xml  (+220 more)
ojsharvest/: harvest.py
(+20591 files in other folders)
