[tool.poetry]
name = "ojsharvest"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
httpx = "^0.28.0"
click = "^8.1.7"
arrow = "^1.3.0"

[tool.poetry.scripts]
ojs-harvester = "ojsharvest.harvest:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
